--- a/lab2/index.html
+++ b/lab2/index.html
@@ -25,8 +25,8 @@
 		<section>
 			<h1>Hello World </h1>
 			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<h2>Favorite Dinosars</h2>
+					<p>Utah raptor, Trex, spinosaurus.</p>
 			</div>
 
 			<div class="minor-section">
