Favorite Dinosaurs Edit

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -26,7 +26,7 @@
 			<h1>Hello World </h1>
 			<div class="minor-section">
 					<h2>Favorite Dinosars</h2>
-					<p>Utah raptor, Trex, spinosaurus.</p>
+					<p>Utah raptor, Trex, Spinosaurus.</p>
 			</div>
 
 			<div class="minor-section">
