--- a/lab2/index.html
+++ b/lab2/index.html
@@ -23,7 +23,7 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Hello World </h1>
+			<h1>HTML & CSS Starter </h1>
 			<div class="minor-section">
 					<h2>Favorite Dinosars</h2>
 					<p>Utah raptor, Trex, Spinosaurus.</p>
