--- a/lab2/index.html
+++ b/lab2/index.html
@@ -25,8 +25,8 @@
 		<section>
 			<h1>HTML & CSS Starter </h1>
 			<div class="minor-section">
-					<h2>Favorite Dinosars</h2>
-					<p>Utah raptor, Trex, Spinosaurus.</p>
+					<h2>Challenge</h2>
+					<p>I have some coding experince but only in HTML.</p>
 			</div>
 
 			<div class="minor-section">
