--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,9 +10,9 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
 	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css"> 
+	<!-- <link rel="stylesheet" type="text/css" href="../css/site.css">  -->
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/lab.css"> -->
 	
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -26,7 +26,7 @@
 			<h1>HTML & CSS Starter </h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>I have some coding experince but only in HTML.</p>
+					<p>I have much expirence in coding.</p>
 			</div>
 
 			<div class="minor-section">
