--- a/lab2/index.html
+++ b/lab2/index.html
@@ -26,7 +26,7 @@
 			<h1>HTML & CSS Starter </h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>I have much expirence in coding.</p>
+					<p>I dont have much experience in coding.</p>
 			</div>
 
 			<div class="minor-section">
