--- a/lab2/index.html
+++ b/lab2/index.html
@@ -23,10 +23,10 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>HTML & CSS Starter, Hello World </h1>
+			<h1>Lab 2 HTML & CSS Starter, Hello World </h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here..</p>
+					<p>Restate the challenge of the lab here.</p>
 			</div>
 
 			<div class="minor-section">
