--- a/lab2/index.html
+++ b/lab2/index.html
@@ -32,6 +32,8 @@
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>Not alot of issues. I used this time to practice code and working between HTML and CSS </p>>
+				</p>
 			</div>
 
 			<div class="minor-section">
