--- a/lab2/index.html
+++ b/lab2/index.html
@@ -27,23 +27,25 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
-					<p>The challenge for this lab was to become familiar and work with HTML and CSS. CSS to change the elements of the websites such as text, color or layout. </p></p>
+					<p>- The challenge for this lab was to become familiar and work with HTML and CSS. Using CSS to change the elements of the websites such as text, color or layout. </p></p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
-					<p>Not alot of issues. I used this time to practice code and working between HTML and CSS </p>
+					<p>- Not alot of issues. I used this time to practice code and working between HTML and CSS </p>
 				</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+				
 					<div id="output"></div>
 			</div>
 		</section>
