--- a/lab2/index.html
+++ b/lab2/index.html
@@ -45,6 +45,7 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p>- After completing the lab I was able to change the color and border of the text boxes of the documents and also change the font of the page.</p>
 				
 					<div id="output"></div>
 			</div>
