--- a/lab3/index.html
+++ b/lab3/index.html
@@ -27,6 +27,7 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<img id="my-portrait" src="img/myphoto.jpg" />
 			</div>
 
 			<div class="minor-section">
