--- a/lab3/index.html
+++ b/lab3/index.html
@@ -27,17 +27,20 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challenge for this lab was to add a image to our website and also to learn how transfer and structure our files in CSS and HTML</p>
 					<img id="my-portrait" src="img/myphoto.jpg" />
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- When working on my lab I didn't encounter many issues, just mainly remember the heiarchy of files</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- The lab was a really good excerise as it gave me more time to practice switching between HTML and CSS</p>
 			</div>
 
 			<div class="minor-section">
