added index html link from lab 3 to lab 2

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -47,10 +47,20 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+			<div> class="minor-section
+				<h2>Task 1 Screenshot</h2>
+			
+			</h2>
+			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
+/art101/lab3/
+
+<a href="../index.html">homepage</a>
+<ahref="<div class="">
+<lab2> lab>"lab 2</a> </a>
+
 	</main>
 </body>
 </html>
