hide element for minor section

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -47,10 +47,10 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
-			<div> class="minor-section
+			<!-- <div> class="minor-section" -->
 				<h2>Task 1 Screenshot</h2>
 				<img id="my-portrait" src="img/myphoto.jpg" />
-				
+
 			
 			</h2>
 			</div>
