moved my image farther down to webpage under task 1 page

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -47,11 +47,11 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
-			<!-- <div> class="minor-section" -->
-				<h2>Task 1 Screenshot</h2>
-				<img id="my-portrait" src="img/myphoto.jpg" />
-
 			
+			<div class="minor-section"
+				<h1>Task 1 - My Photo</h1>
+				<img id="my-portrait" src="img/myphoto.jpg" />
+		
 			</h2>
 			</div>
 		</section>
