edited and fix minor section code line

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -48,12 +48,11 @@
 					<div id="output"></div>
 			</div>
 			
-			<div class="minor-section"
-				<h1>Task 1 - My Photo</h1>
-				<img id="my-portrait" src="img/myphoto.jpg" />
-		
-			</h2>
+			<div class="minor-section">
+				    <h2>Task 1 - My Photo</h2>
+				    <img id="my-portrait" src="img/myphoto.jpg" />
 			</div>
+
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
