added and adjusted size of task 2 screenshot

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -53,6 +53,11 @@
 				    <img id="my-portrait" src="img/myphoto.jpg" />
 			</div>
 
+			<div class="minor-section">
+				<h2>Task 2 Screenshot</h2>
+				<img id="lab3filehierarchyphoto" src="img/lab3filehierarchyphoto.jpg" />
+			</div>
+
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
