Home page edits

--- a/index.html
+++ b/index.html
@@ -21,13 +21,31 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>MyName's Homepage</h1>
+			<h1>Austin Allen's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<div class="minor-section">
 					<h2>About Me</h2>
-					<p>I have a pet cat named Godzilla. I would die for him.</p>
+					<p>Hello world
+						My name is Austin Allen, I am third year transfer student from Foothill College and my major is film and digital media.
+						I primaily do digital illustration and painting with my subjects primarily being paleo, science fiction and western art.
+						But I also like making edits of films and doing montages of music videos of edited scenes from films or videogames. 
+				
+					</p>
+					
 			</div>
+		<div class=" minor-section">
+		<h2>My Hobbies and Interest</h2>
+		<p>Some of my interest can be brooken down to dinosaurs, cowboys, native ameircan culture, history such as ancient, modern and anthropology, video games and tabletop as well as movies.
+			In no partiuclar order my favorite dinosaurs are, utahraptor, trex, spinosaurus, maip macrothorax, iguanodon, and pachyrhinosaurus.
+			Some of my favorite films are Robocop (1987), Jurassic Park, Dredd, Star Trek The Undiscovered Country, Dune (1984), Godzilla Final Wars and also Drive.
+			I also enjoy playing both tabletop games such as Test of Honor, GURPS, Magic the Gathering and also Warhammer. Recently i've been playing Helldivers 2 and two of my 
+			favorite video games being the Metal Gear and Halo. 
+
+		</p>
+
+
 
 		</section>
 		<nav id="links">
