Added css and html screenshot and code for image source files

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -54,9 +54,20 @@
 			</div>
 
 			<div class="minor-section">
-				<h2>Task 2 Screenshot</h2>
+				<h2>Task 2 - File structure</h2>
 				<img id="lab3filehierarchyphoto" src="img/lab3filehierarchyphoto.jpg" />
 			</div>
+
+			<div class="minor-section">
+				<h2>Task 3 - HTML Screenshot</h2>
+				<img id="lab3htmlscreenshot" src="img/lab3htmlscreenshot.jpg"/>
+			</div>
+
+			<div class="minor-section">
+				<h2>Task 4 - CSS Screenshot</h2>
+				<img id="lab3htmlscreenshot" src="img/lab3cssscreenshot.jpg"/>
+			</div>
+			
 
 		</section>
 		<nav id="links">
