final code screenshot

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -68,6 +68,10 @@
 				<img id="lab3htmlscreenshot" src="img/lab3cssscreenshot.jpg"/>
 			</div>
 			
+			<div class="minor-section">
+				<h2>Final Code Screenshot</h2>
+				<img id="lab3finalcodescreenshot" src="img/lab3finalcodescreenshot.jpg"/>
+			</div>
 
 		</section>
 		<nav id="links">
