Made adjustments to my responses and formats

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -27,44 +27,50 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
-					<p>- The challenge for this lab was to add a image to our website and also to learn how transfer and structure our files in CSS and HTML</p>
+					<p>- The challenge for this lab was to add a image, create and structure a file documents and to also create a link between my webpage and my labs.</p>
 					
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
-					<p>- When working on my lab I didn't encounter many issues, just mainly remember the heiarchy of files</p>
+					<p>- When working I had some minor issues, mainly was making sure my files were structred correctly and the titles of my image fies were properly formated. 
+						One issue that I had was linking between my lab 3 to my homepage and my homepage to my lab 3, but after going through the lab instructions I was able to fix my links. 
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-					<p>- The lab was a really good excerise as it gave me more time to practice switching between HTML and CSS</p>
+					<p>- My lab went well. At first the beginning was intimidating at first and seemed like one change in CSS or HTML would affect the file structure 
+						but working with my lab partner, Val, we we're able to work together in structuring our labs and working out any coding issues such as linking about labs to our homepages. 
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p>- After completing my lab I was able to add and adjust the size of my screenshots to my webpage 
+						and also able to link my labs to my homepage. Also more better familar using CSS and HTML as well how to strucutre my files.</p>
 					<div id="output"></div>
 			</div>
 			
 			<div class="minor-section">
-				    <h2>Task 1 - My Photo</h2>
+				    <h2>My Photo</h2>
 				    <img id="my-portrait" src="img/myphoto.jpg" />
 			</div>
 
 			<div class="minor-section">
-				<h2>Task 2 - File structure</h2>
+				<h2>File structure</h2>
 				<img id="lab3filehierarchyphoto" src="img/lab3filehierarchyphoto.jpg" />
 			</div>
 
 			<div class="minor-section">
-				<h2>Task 3 - HTML Screenshot</h2>
+				<h2>HTML Screenshot</h2>
 				<img id="lab3htmlscreenshot" src="img/lab3htmlscreenshot.jpg"/>
 			</div>
 
 			<div class="minor-section">
-				<h2>Task 4 - CSS Screenshot</h2>
+				<h2>CSS Screenshot</h2>
 				<img id="lab3htmlscreenshot" src="img/lab3cssscreenshot.jpg"/>
 			</div>
 			
@@ -74,14 +80,15 @@
 			</div>
 
 		</section>
+		<div  class="minor-section">
+			<h2>Homepage Link</h2>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
-
-
-<a href="../index.html">homepage</a>
-<ahref="<div class="">
-<lab2> lab>"lab 2</a> </a>
-
+			<a href="../index.html">homepage</a>
+			<ahref="<div class="">
+			<lab2></a> </a>
+			</div>
+			
 	</main>
 </body>
 </html>
