Created section and changed profile for homepage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Austin Allen's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<img class="homepage_profile" src="./img/homepage_profile.jpg">
 					<div class="minor-section">
 					<h2>About Me</h2>
 					<p>Hello world
@@ -48,8 +48,12 @@
 
 
 		</section>
+		<div class="minor-section">
+			<h2>Lab Links</h2>
 		<nav id="links">
 			<!-- Put links to labs here. -->
+		
+		</div>
 		</nav>
 	</main>
 </body>
