homepage to lab 3 link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			In no partiuclar order my favorite dinosaurs are, utahraptor, trex, spinosaurus, maip macrothorax, iguanodon, and pachyrhinosaurus.
 			Some of my favorite films are Robocop (1987), Jurassic Park, Dredd, Star Trek The Undiscovered Country, Dune (1984), Godzilla Final Wars and also Drive.
 			I also enjoy playing both tabletop games such as Test of Honor, GURPS, Magic the Gathering and also Warhammer. Recently i've been playing Helldivers 2 and two of my 
-			favorite video games being the Metal Gear and Halo. 
+			favorite video games being Metal Gear and Halo. 
 
 		</p>
 
@@ -53,7 +53,11 @@
 		<nav id="links">
 			<!-- Put links to labs here. -->
 		
+	
+		<a href="lab3/">Lab 3 File Structutre and File Transfer </a>
+
 		</div>
+	
 		</nav>
 	</main>
 </body>
