site navigation links

--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
 		</section>
 		<div class="minor-section">
 			<h2>Lab Links</h2>
+
+		<nav id="links"></nav>
+		<a href="lab1">Lab 1 Experiment Page</a>
+
+
 		<nav id="links">
 			<!-- Put links to labs here. -->
-		
-	
+		<a href="lab2">Lab 2 CSS and HTML</a>
+
+		<nav id="links"></nav>
 		<a href="lab3/">Lab 3 File Structutre and File Transfer </a>
 
 		</div>
