--- a/lab1/index.html
+++ b/lab1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment 1 - Subject/Topic</title>
+	<title>Lab 1 Experiment Page</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,7 +23,7 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Experiment 1 - Subject/Topic</h1>
+			<h1>Lab 1 Experiment Page</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
@@ -43,6 +43,15 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+
+			<div class="minor-section">
+				<h2>Homepage</h2>
+				<a href="../index.html">homepage</a>
+			<ahref="<div class="">
+			</a>
+			</div>
+
+
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
