--- a/lab3/index.html
+++ b/lab3/index.html
@@ -84,7 +84,7 @@
 			<h2>Homepage Link</h2>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
-			<a href="../index.html">homepage</a>
+			<a href="../index.html">Homepage</a>
 			<ahref="<div class="">
 			<lab2></a> </a>
 			</div>
