--- a/lab2/index.html
+++ b/lab2/index.html
@@ -49,7 +49,16 @@
 				
 					<div id="output"></div>
 			</div>
-		</section>
+
+	</section>
+	<div  class="minor-section">
+		<h2>Homepage Link</h2>
+	<nav id="links">
+		<!-- Put links to other pages (including the homepage) here. -->
+		<a href="../index.html">Homepage</a>
+		<ahref="<div class="">
+		<lab2></a> </a>
+		</div>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 		</nav>
