--- a/lab1/index.html
+++ b/lab1/index.html
@@ -46,7 +46,7 @@
 
 			<div class="minor-section">
 				<h2>Homepage</h2>
-				<a href="../index.html">homepage</a>
+				<a href="../index.html">Homepage</a>
 			<ahref="<div class="">
 			</a>
 			</div>
