--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 
 		</section>
+		<!-- Put links to labs here. -->
 		<div class="minor-section">
 			<h2>Lab Links</h2>
 
@@ -62,6 +63,9 @@
 		<nav id="links"></nav>
 		<a href="lab3/">Lab 3 File Structutre and File Transfer </a>
 
+	
+		<nav id="links"></nav>
+		<a href="lab4/">Lab 4 Pseudocoding and Problem-solving</a>
 		</div>
 	
 		</nav>
