--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	
 		<nav id="links"></nav>
-		<a href="lab4/">Lab 4 Pseudocoding and Problem-solving</a>
+		<a href="lab4/">Lab 4 Pseudocoding and Problem Solving</a>
 		</div>
 	
 		</nav>
