--- a/lab4/index.html
+++ b/lab4/index.html
@@ -64,7 +64,12 @@
 				create the game board: 10 x 10 hex grid with empty values 
 				
 				//User Character Creation 
-				//to make your character,the user has a base state of 10 and can from 1 to 10 points to add for the stats and have 50 points to spend. ST, DX, IQ and HT are the player stats, (ST) stands for strength determines how strong a character is and how much damage they can deal, (DX) stands for dexterity for skills, physical rolls and counter maneuvers (IQ) determines intelligence and perception rolls, (HT) determines health rolls and how much damage the can take before dying.
+				to make your character,the user has a base state of 10 and can from 1 to 10 points to add 
+				for the stats and have 50 points to spend. ST, DX, IQ and HT are the player stats, (ST) stands
+				for strength determines how strong a character is and how much damage they can deal, (DX) stands 
+				for dexterity for skills, physical rolls and counter maneuvers (IQ) determines intelligence and
+				perception rolls, (HT) determines health rolls and how much damage 
+				the can take before dying.
 				 
 				 //Dice Roll Function
 						   //to play GURPS, player and DM will roll a 3D6 to determine action outcomes
