added JS output and webpage link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 	
 		<nav id="links"></nav>
 		<a href="lab4/">Lab 4 Pseudocoding and Problem Solving</a>
+
+		<nav id="links"></nav>
+		<a href="lab5/">Lab 5 Data Types and Variables</a>
 		</div>
 	
 		</nav>
