--- a/lab5/index.html
+++ b/lab5/index.html
@@ -43,18 +43,23 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
-		
-	     <section>
+		</section>
+
+	<section>
 		<div class = "minor section">
 			<h2>Script Output</h2>
-			
+			<div class=output>
+				<script type="text/javascript" src="js/lab.js"></script>	
 		</div>	
-
-
 		</section>
-		</section>
+	
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<div class="minor-section">
+				<h2>Homepage Link</h2>
+				<nav id="links">
+				<a href="../index.html">Homepage</a>
+				</div>
 		</nav>
 	</main>
 </body>
