--- a/lab5/index.html
+++ b/lab5/index.html
@@ -17,7 +17,7 @@
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
@@ -27,20 +27,34 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challenge for this lab was tp write and create variables from javascript. We created 
+						variables for a car and is features as variables such as year, model, color of the car.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- The only problems that I had was the writing convetions for javascript and also following 
+						the correct writing formats and variables. 
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- After completeting the lab I feel that I have a better understandig of Javavscript and also better working 
+						between HTML, CSS and Javascript. I hope to use something the material learned in class to make a roleplay/ text based
+						RPG using Javascript.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p>Below I have screenshots of code written in the console of a web broswer and also my written code in Java</p>
+
+					<img id="lab5_js_code_screenshot" src="img/lab5_js_code_screenshot.jpg"/>
+					<img id="lab5_task1_screenshot" src="img/lab5_task1_screenshot.jpg"/>
 					<div id="output"></div>
 			</div>
 
