adjust code fir CSS and HTML

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -52,18 +52,23 @@
 			<div class="minor-section">
 					<h2>Results</h2>
 					<p>Below I have screenshots of code written in the console of a web broswer and also my written code in Java</p>
-
+          
 					<img id="lab5_js_code_screenshot" src="img/lab5_js_code_screenshot.jpg"/>
 					<img id="lab5_task1_screenshot" src="img/lab5_task1_screenshot.jpg"/>
 					<div id="output"></div>
+					<h2>Script Output</h2>
+					<script type="text/javascript" src="js/lab.js"></script>	
+					
+				<img id="lab5_jeep_screenshot" src="img/lab5_jeep_screenshot.jpg"/>
 			</div>
 
-
-	    	<div class = "minor section">
-			<h2>Script Output</h2>
-			<div class=output>
+             <!-- <section>
+	    	<div class = "minor section"> -->
+			<!-- <h2>Script Output</h2> -->
+			<!-- <div class=output>
 				<script type="text/javascript" src="js/lab.js"></script>	
-				<img id="lab5_jeep_screenshot" src="img/lab5_jeep_screenshot.jpg"/>
+				<img id="lab5_jeep_screenshot" src="img/lab5_jeep_screenshot.jpg"/> -->
+			</section>
 		 </div>	
 
 		</section>
