--- a/lab5/index.html
+++ b/lab5/index.html
@@ -58,8 +58,8 @@
 					<div id="output"></div>
 					<h2>Script Output</h2>
 					<script type="text/javascript" src="js/lab.js"></script>	
-					
-				<img id="lab5_jeep_screenshot" src="img/lab5_jeep_screenshot.jpg"/>
+
+				<img id="lab5_jeep_yj" src="img/lab5_jeep_yj.jpeg"/>
 			</div>
 
              <!-- <section>
