--- a/lab6/index.html
+++ b/lab6/index.html
@@ -50,6 +50,11 @@
         <script src="js/lab.js"></script>
 			</div>
 
+			<div class="minor-section">
+				<h2>1973 Chevy Malibu - My Dream Ride</h2>
+				<img id="lab6_chevymalibu" src="img/lab6_chevymalibu.jpg"/>
+			</div>
+
 		
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
