--- a/lab6/index.html
+++ b/lab6/index.html
@@ -47,11 +47,11 @@
 
 		    <div class="minor-section">
 				<h2>Script Output</h2>
-        <script src="js/lab.js"></script>
+        <script type = "text/javascript" src="js/lab.js"></script>
 			</div>
 
 			<div class="minor-section">
-				<h2>1973 Chevy Malibu - My Dream Ride</h2>
+				<h2>1973 Chevy Malibu - Not Because of Drive from 2011</h2>
 				<img id="lab6_chevymalibu" src="img/lab6_chevymalibu.jpg"/>
 			</div>
 
