added links to homepage and lab page

--- a/index.html
+++ b/index.html
@@ -58,20 +58,26 @@
 
 		<nav id="links">
 			<!-- Put links to labs here. -->
-		<a href="lab2">Lab 2 CSS and HTML</a>
+		<a href="lab2">Lab 2 - CSS and HTML</a>
 
 		<nav id="links"></nav>
-		<a href="lab3/">Lab 3 File Structutre and File Transfer </a>
+		<a href="lab3/">Lab 3 - File Structutre and File Transfer </a>
 
 	
 		<nav id="links"></nav>
-		<a href="lab4/">Lab 4 Pseudocoding and Problem Solving</a>
+		<a href="lab4/">Lab 4 - Pseudocoding and Problem Solving</a>
 
 		<nav id="links"></nav>
-		<a href="lab5/">Lab 5 Data Types and Variables</a>
-		</div>
-	
+		<a href="lab5/">Lab 5 - Data Types and Variables</a>
+		
+
+		<nav id="links"></nav>
+		<a href="lab6/">Lab 6 - Arrays and Objects</a>
+	    </div>
+
 		</nav>
 	</main>
+
+
 </body>
 </html>
