--- a/lab6/index.html
+++ b/lab6/index.html
@@ -58,6 +58,11 @@
 		
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
+			<div class="minor-section">
+				<h2>Homepage Link</h2>
+				<nav id="links">
+				<a href="../index.html">Homepage</a>
+				</div>
 		</nav>
 	</main>
 </body>
