--- a/lab6/index.html
+++ b/lab6/index.html
@@ -27,21 +27,30 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challeneg for this lab was to create and arrays and object variables in Javascript by 
+						using the variables of a car. 
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- While writing my code in javascript I did have some issues as when my code was presented it would say "[object, object]" but 
+						but I went back edited my console log and array and was correct. The other issues I had was choosing what car I wanted to show off.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- The project was challeneging but I feel like that im becoming more familar and have a better understanding of Javascript/  </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output">
+					<img id="lab6_task1_screenshot" src="img/lab6_task1_screenshot.jpg">
+					<img id="lab6_jss_html_screenshot" src="img/lab6_jss_html_screenshot.jpg">
 			</div>
 		</section>
 
