--- a/lab6/index.html
+++ b/lab6/index.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="minor-section">
-				<h2>1973 Chevy Malibu - Not Because of Drive from 2011</h2>
+				<h2>1973 Chevy Malibu</h2>
 				<img id="lab6_chevymalibu" src="img/lab6_chevymalibu.jpg"/>
 			</div>
 
