created HTML script and links for lab and homepage

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
 		<nav id="links"></nav>
 		<a href="lab6/">Lab 6 - Arrays and Objects</a>
+
+		<nav id="'links"></nav>
+		<a href="lab7/">Lab 7 - Functions</a>
 	    </div>
 
 		</nav>
