connected JS to HTML

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -40,16 +40,25 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+
+			<div class="minor-section">
+				<h2>Javascript Output</h2>
+				<div>
+					<script src="js/lab.js"></script>
+
+			</div>
+
 		</section>
+
 
         <div  class="minor-section">
             <h2>Homepage Link</h2>
         <nav id="links">
-            
             <a href="../index.html">Homepage</a>
             <ahref="<div class="">
             </div>
-            </nav>
+         </nav>
+
 	</main>
 </body>
 </html>
