--- a/lab7_extracredit/index.html
+++ b/lab7_extracredit/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 7 - Functions
+	<title>Lab 7 - Extra Credit 
     </title>
 
   	<meta charset="UTF-8" />
@@ -20,25 +20,10 @@
 	
 	<main id="content">
 		<section>
-			<h1>Lab 7 - Functions</h1>
+			<h1>Lab 7 - Extra Credit</h1>
 			<div class="minor-section">
-					<h2>Challenge</h2>
+					<h2>Welcome to Mother Base Diamond Dog</h2>
 					<p>Restate the challenge of the lab here.</p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
 			</div>
 
 			<div class="minor-section">
@@ -47,7 +32,7 @@
 					<script src="js/lab.js"></script>
 
 			</div>
-
+			
 		</section>
 
 
