added css code and img

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -39,6 +39,7 @@
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
+					<img id="lab7_code" src="img/lab7.jpg"/>
 			</div>
 
 			<div class="minor-section">
