added responses in html

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -24,17 +24,29 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challenge for this lab was to create a function in Javascript and to create an output 
+						based on a user input that rearranges their name by using string and arrays functions and variables.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- When create my code I faced some issues. My webpage at first showed the "enter prompt" twice and 
+						didn't show the output from the user's input but I meet with Professor Dolgov and able to correct my
+						code. After I've been praciting using Javascript and when I ever encounters I use the console section 
+						under the inspect to help me find any errors that can occur when working in javascript.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
+			        <p>- After compeletig the lab I felt that I still have alot to remember my code and working in Javascript. But 
+						sense completing the lab I've been working in writing my code in JS bin to test code and also write down my code
+						to help remember and practice writing code. 
+					</p>
+				</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
