--- a/lab8/index.html
+++ b/lab8/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 8 </title>
+	<title>Lab 8 - Anon Functions and Callbacks </title>
+    <script src="js/lab.js" defer></script>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -19,6 +20,8 @@
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
+
+
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
@@ -43,6 +46,11 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+
+            <div class="minor-section">
+                <h2>Javascript Output</h2>
+
+            </div>
 
 		</section>
 		<nav id="links">
