edited js script

--- a/lab8/index.html
+++ b/lab8/index.html
@@ -49,6 +49,8 @@
 
             <div class="minor-section">
                 <h2>Javascript Output</h2>
+                <div id="output">   
+                </div>
 
             </div>
 
