--- a/lab8/index.html
+++ b/lab8/index.html
@@ -3,7 +3,14 @@
 <head>
 	<!-- This title is used for tabs and bookmarks -->
 	<title>Lab 8 - Anon Functions and Callbacks </title>
-    <script src="js/lab.js" defer></script>
+    <!-- <script src="js/lab.js" defer></script> -->
+
+    <link rel="stylesheet" type="text/css" href="css/site.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/lab.js" DEFER></script>
+
+
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -44,12 +51,12 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+				
 			</div>
 
             <div class="minor-section">
                 <h2>Javascript Output</h2>
-                <div id="output">   
+                <div id="output"> 
                 </div>
 
             </div>
