--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
 		<nav id="'links"></nav>
 		<a href="lab7/">Lab 7 - Functions</a>
+
+		<nav id="'links"></nav>
+		<a href="lab8/">Lab 8 - Anon Functions and Callbacks</a>
 	    </div>
 
 		</nav>
