--- a/lab8/index.html
+++ b/lab8/index.html
@@ -4,6 +4,8 @@
 	<!-- This title is used for tabs and bookmarks -->
 	<title>Lab 8 - Anon Functions and Callbacks </title>
     <!-- <script src="js/lab.js" defer></script> -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/lab.js" DEFER></script>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
