edited css and js code

--- a/lab7_extracredit/index.html
+++ b/lab7_extracredit/index.html
@@ -23,7 +23,8 @@
 			<h1>Lab 7 - Extra Credit</h1>
 			<div class="minor-section">
 					<h2>Welcome to Mother Base Diamond Dog</h2>
-					<img src="bigboss_gif.gif" alt="bigboss_gif"/>
+					<img id="bigboss_gif" src="img/bigboss_gif.gif"/>
+				</div>
 			</div>
 
 			<div class="minor-section">
