--- a/lab8/index.html
+++ b/lab8/index.html
@@ -37,15 +37,25 @@
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- At first I had issues I had issues having my array results output show on my webpage but after looking
+						my code I realized my issue and had to declare my variables and check for spelling errors. But I also 
+						looked for the issues in JS that showed my varibales as being undefined. After I went back and edited.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- This lab was both diffcult but helped become better at Javascript and a working flow working between JS and using 
+						inspection to test and look for any errors in my code. Also my lab partner Charles was also really helpful in helping me
+					 any issues with my code and questions that I have.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<img id="lab8_code" src="img/lab8_code.jpg"/>
+					<img id="lab8_console" src="img/lab8_console.jpg"/>
+			</div>
 				
 			</div>
 
