--- a/lab8/index.html
+++ b/lab8/index.html
@@ -32,6 +32,9 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challene for this lab was to create anon and callback functions and create an array of
+						variables to be called back and arranged to be shown in a console then outputed on our webpage.
+					</p>
 			</div>
 
 			<div class="minor-section">
