--- a/lab9/index.html
+++ b/lab9/index.html
@@ -9,21 +9,20 @@
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
+
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
+
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
+
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 9</h1>
+			<h1>Lab 9 - Libraries & jQuery</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
@@ -43,10 +42,18 @@
 					<h2>Results</h2>
 					<div id="output"> color me up</div>
 			</div>
+
 		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
+		
+        <nav id="links">
+			<div class="minor-section">
+				<h2>Homepage</h2>
+				<a href="../index.html">Homepage</a>
+			<ahref="<div class="">
+			</a>
+			</div>
 		</nav>
+
 	</main>
 </body>
 </html>
