--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
 			<h2>Lab Links</h2>
 
 		<nav id="links"></nav>
-		<a href="lab1">Lab 1 Experiment Page</a>
+		<a href="lab1">Lab 1 Experiment Page</a> 
 
-
-		<nav id="links">
-			<!-- Put links to labs here. -->
+		<nav id="links"></nav>
 		<a href="lab2">Lab 2 - CSS and HTML</a>
 
 		<nav id="links"></nav>
@@ -78,7 +76,11 @@
 		<a href="lab7/">Lab 7 - Functions</a>
 
 		<nav id="'links"></nav>
-		<a href="lab8/">Lab 8 - Anon Functions and Callbacks</a>
+		<a href="lab8/">Lab 8 - Anon Functions and Callbacks</a> 
+
+		<nav id="'links"></nav>
+		<a href="lab9/">Lab 9 - Libraries & jQuery</a>
+
 	    </div>
 
 		</nav>
