--- a/lab9/index.html
+++ b/lab9/index.html
@@ -40,7 +40,12 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"> color me up</div>
+					
+			</div>
+
+			<div class="minor-section">
+				  <h2>Button - what ever you do...don't pust this putton </h2>
+				  <div id="output"> color me up</div>
 			</div>
 
 		</section>
