--- a/lab9/index.html
+++ b/lab9/index.html
@@ -16,10 +16,11 @@
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	
 </head>
 
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
+	
 	<main id="content">
 		<section>
 			<h1>Lab 9 - Libraries & jQuery</h1>
@@ -46,10 +47,16 @@
 			<div class="minor-section">
 				  <h2>Button - what ever you do...don't pust this putton </h2>
 				  <div id="output"> color me up</div>
+				  <script
+				  src="https://code.jquery.com/jquery-3.7.1.min.js"
+				  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+				  crossorigin="anonymous"></script>
 			</div>
 
 		</section>
 		
+
+
         <nav id="links">
 			<div class="minor-section">
 				<h2>Homepage</h2>
