--- a/lab9/index.html
+++ b/lab9/index.html
@@ -45,13 +45,20 @@
 			</div>
 
 			<div class="minor-section">
-				  <h2>Button - what ever you do...don't pust this putton </h2>
-				  <div id="output"> color me up</div>
+				  <h2>What ever you do...don't pust this button or you'll become invsibible </h2>
+
+				  <button class="btn btn-challenge">Da Button</button>
+				  <div id="output"> 
+
+				  </div>
+
 				  <script
 				  src="https://code.jquery.com/jquery-3.7.1.min.js"
 				  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-				  crossorigin="anonymous"></script>
+				  crossorigin="anonymous">
+				</script>
 			</div>
+
 
 		</section>
 		
@@ -61,7 +68,7 @@
 			<div class="minor-section">
 				<h2>Homepage</h2>
 				<a href="../index.html">Homepage</a>
-			<ahref="<div class="">
+			<ahref=" class="">
 			</a>
 			</div>
 		</nav>
