added html code for gif

--- a/lab9/index.html
+++ b/lab9/index.html
@@ -48,6 +48,9 @@
 				  <h2>What ever you do...don't pust this button or you'll become invsibible </h2>
 
 				  <button class="btn btn-challenge">Da Button</button>
+				  <div class="gif-content" style="display: none;">
+				 <img id="duranduran_gif" src="img/duranduran_gif.gif"/>
+				  </div>
 				  <div id="output"> 
 
 				  </div>
