--- a/lab9/index.html
+++ b/lab9/index.html
@@ -27,6 +27,8 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+
+				 <button class="btn btn-challenge">Press for Change</button>
 			</div>
 
 			<div class="minor-section">
@@ -47,19 +49,14 @@
 			<div class="minor-section">
 				  <h2>What ever you do...don't pust this button or you'll become invsibible </h2>
 
-				  <button class="btn btn-challenge">Da Button</button>
+				  <button class="btn btn-duranduran">Da Button</button>
 				  <div class="gif-content" style="display: none;">
-				 <img id="duranduran_gif" src="img/duranduran_gif.gif"/>
+				
 				  </div>
 				  <div id="output"> 
 
 				  </div>
-
-				  <script
-				  src="https://code.jquery.com/jquery-3.7.1.min.js"
-				  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-				  crossorigin="anonymous">
-				</script>
+				  
 			</div>
 
 
