--- a/lab9/index.html
+++ b/lab9/index.html
@@ -28,7 +28,8 @@
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
 
-				 <button class="btn btn-challenge">Press for Change</button>
+				    <button id="Focus">Press to Focus</button>
+
 			</div>
 
 			<div class="minor-section">
@@ -53,11 +54,9 @@
 			<div class="minor-section">
 				  <h2>What ever you do...don't pust this button or you'll become invsibible </h2>
 
-				  <button class="btn btn-duranduran">Da Button</button>
-				  <div class="gif-content" style="display: none;">
-				
-				  </div>
-				  <div id="output"> 
+				  <button id="toggle-btn">Da Button</button>
+                 
+                  <div id="panel"><img id="duranduran" src="img/duranduran.gif"/></div>
 
 				  </div>
 
