--- a/lab9/index.html
+++ b/lab9/index.html
@@ -22,13 +22,14 @@
 <body>
 	
 	<main id="content">
+		
 		<section>
 			<h1>Lab 9 - Libraries & jQuery</h1>
-			<div class="minor-section">
+			<div class="minor-section"> <id="challengeSection"></id>
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
 
-				    <button id="Focus">Press to Focus</button>
+				    <button id="challenge">Make Special</button>
 
 			</div>
 
@@ -42,7 +43,7 @@
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section"> <id="resultsSection"></id>
 					<h2>Results</h2>
                     
 					
@@ -63,7 +64,7 @@
 
 		</section>
 		
-
+       <div id="output"></div>
 
         <nav id="links">
 			<div class="minor-section">
