--- a/lab9/index.html
+++ b/lab9/index.html
@@ -25,7 +25,7 @@
 		
 		<section>
 			<h1>Lab 9 - Libraries & jQuery</h1>
-			<div class="minor-section"> <id="challengeSection"></id>
+			<div class="minor-section"> <id="challenge"></id>
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
 
