--- a/lab9/index.html
+++ b/lab9/index.html
@@ -25,7 +25,7 @@
 		
 		<section>
 			<h1>Lab 9 - Libraries & jQuery</h1>
-			<div class="minor-section"> <id="challenge"></id>
+			<div class="minor-section"> <id="challengeSection"></id>
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
 
@@ -56,7 +56,8 @@
 				  <h2>What ever you do...don't push this button or you'll become invsibible </h2>
 
 				  <button id="toggle-btn">Da Button</button>
-                  <div id="panel"><img id="duranduran" src="img/duranduran.gif"/></div>
+				  <!--working on this button-->
+                  <!-- <div id="panel"><img id="duranduran" src="img/duranduran.gif"/></div> -->
 				  </div>
 
 			</div>
