--- a/lab9/index.html
+++ b/lab9/index.html
@@ -25,11 +25,9 @@
 		
 		<section>
 			<h1>Lab 9 - Libraries & jQuery</h1>
-			<div class="minor-section"> <id="challenge"></id>
+			<div class="minor-section button-press">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
-
-				    <button id="challenge">Make Special</button>
 
 			</div>
 
