--- a/lab9/index.html
+++ b/lab9/index.html
@@ -28,27 +28,39 @@
 			<div class="minor-section button-press">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- For this lab our challenge was to create functions that create buttons on our webpage using
+						JQurey and libaries to change elements on the webpage.
+					</p>
 
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section button-press">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- When I started on my lab I had some issues, I was able to create the interactive buttons
+						but weren't working as imputed the function declarions incorrectly or didn't write the code correctly. 
+						I reached out to my lab partner, Charles, to help and he was able to explain my declartions and how to properly 
+						format my code. I also used the examples and practiced some of the demos show at W3Schools.
+					</p>
+			</div>
+
+			<div class="minor-section button-press">
+					<h2>Reflection</h2>
+					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<P>- Working on this assignment was challenge but I feel like that I learned alot but also encouraged me to try 
+						and spend time more often using W3Schools and also the Xtask assignments as well. I also made sure to start early to
+						give me enough time to work and learn while working on the lab.
+					</P>
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section"> <id="resultsSection"></id>
-					<h2>Results</h2>
-                    
-					
-					<button id="hide">Hide Results</button>
+             <h2>Results</h2>
+                  <button id="hide">Hide Results</button>
                     <button id="show">Show Results</button>
-					<p id="resultText">BBNO$</p>
-			</div>
+                     <div id="resultText">
+                  <img id="lab9_code" src="img/lab9_code.jpg" />
+                </div>
+              </div>
 
 			<div class="minor-section">
 				  <h2>What ever you do...don't push this button or you'll become invsibible </h2>
@@ -59,7 +71,6 @@
 				  </div>
 
 			</div>
-
 
 		</section>
 		
