--- a/lab9/index.html
+++ b/lab9/index.html
@@ -63,13 +63,10 @@
               </div>
 
 			<div class="minor-section">
-				  <h2>What ever you do...don't push this button or you'll become invsibible </h2>
-
-				  <button id="toggle-btn">Da Button</button>
-				  <!--working on this button-->
-                  <!-- <div id="panel"><img id="duranduran" src="img/duranduran.gif"/></div> -->
+				  <h2>Whatever you do...don't push this, Da Button, or you'll become invisible </h2>
+			   <button id="showGifButton">Da Button</button>
+               <div id="gifContainer"></div>
 				  </div>
-
 			</div>
 
 		</section>
