--- a/lab9/index.html
+++ b/lab9/index.html
@@ -63,7 +63,7 @@
               </div>
 
 			<div class="minor-section">
-				  <h2>Whatever you do...don't push this, Da Button, or you'll become invisible </h2>
+				  <h2>Whatever you do...don't push, Da Button, or you'll become invisible </h2>
 			   <button id="showGifButton">Da Button</button>
                <div id="gifContainer"></div>
 				  </div>
