--- a/lab10/index.html
+++ b/lab10/index.html
@@ -42,8 +42,17 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+
             
 		</section>
+
+        <section> 
+            <div class="minor-section">
+                <h3>Dino Chat</h3>
+                
+            </div>
+
+        </section>
 		<nav id="links">
 			<div class="minor-section">
 				<h2>Homepage</h2>
