created section for dino chat and centered headr

--- a/lab10/index.html
+++ b/lab10/index.html
@@ -47,9 +47,9 @@
 		</section>
 
         <section> 
-            <div class="minor-section">
+            <div class="dino-section button-press">
                 <h3>Dino Chat</h3>
-                
+
             </div>
 
         </section>
