--- a/lab10/index.html
+++ b/lab10/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 9</title>
+	<title>Lab 10 - JavaScript for the Web</title>
 
-	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
+
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
@@ -22,7 +21,7 @@
 <body>
  <main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 10 - JavaScript for the Web</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
@@ -49,6 +48,8 @@
         <section> 
             <div class="dino-section button-press">
                 <h3>Dino Chat</h3>
+                <div class="dinochat-section">
+                    <p>BBNO$</p>
 
             </div>
 
