add html code linked to JS in and output

--- a/lab10/index.html
+++ b/lab10/index.html
@@ -39,7 +39,7 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+				
 			</div>
 
             
@@ -50,7 +50,11 @@
                 <h3>Dino Chat</h3>
                 <div class="dinochat-section">
                     <p>BBNO$</p>
-
+                <input id="textbox" type="text">
+  
+                 <button id="action">print text</button>
+                 <div id="output"></div>
+  
             </div>
 
         </section>
