--- a/lab1/index.html
+++ b/lab1/index.html
@@ -49,10 +49,11 @@
 			<div class="minor-section">
 				<h2>Homepage</h2>
 				<a href="../index.html">Homepage</a>
-			<ahref="<div class="">
+		
 			</a>
 			</div>
 		</nav>
 	</main>
 </body>
 </html>
+<html>
