--- a/lab7_extracredit/index.html
+++ b/lab7_extracredit/index.html
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js">defer</script>
 
 	
 </head>
