edited and added code

--- a/lab10/index.html
+++ b/lab10/index.html
@@ -49,10 +49,11 @@
             <div class="dino-section button-press">
                 <h3>Dino Chat</h3>
                 <div class="dinochat-section">
-                    <p>BBNO$</p>
+                    <p>Chat with a Dinosaur</p>
+					  <div id="output"></div>
                 <input id="textbox" type="text">
   
-                 <button id="action">print text</button>
+                 <button id="action">Enter to chat with a dino</button>
                  <div id="output"></div>
   
             </div>
