edited code and replied to my responses

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
 		<nav id="'links"></nav>
 		<a href="lab9/">Lab 9 - Libraries & jQuery</a>
 
+        <nav id="'links"></nav>
+		<a href="lab10/">Lab 10 - JavaScript for the Web</a>
+
+
 	    </div>
 
 		</nav>
