--- a/lab10/index.html
+++ b/lab10/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
+
 	<title>Lab 10 - JavaScript for the Web</title>
 
   	<meta charset="UTF-8" />
@@ -25,17 +25,28 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challenge for this lab was to use Jqurey to make a responsive button that responds to the 
+						user's input. I deiced to have the user talk to a dinosaur. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- I didn't face to many issues as I followed from the examples done during lab and section
+						study whiched helped me with making a fun responsive function in JS and shows how helpful testing 
+						out JS code in JS bin and also using a console.log to see if their is an error occuring in JS.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
+		            <p>- The lab was alot of fun as it helped me with creating a better understanding of JS and using Jqurey but 
+						also better format and strucutre with selecting the elements from my documents. I'm still having trouble as when I first 
+						ran my code it would either not reply to the user's input or would repeat the user input but after using trial and error 
+						I was able to have my code finally working. 
+					</p>
+				</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
