created JS code and output in HTML

--- a/lab11/index.html
+++ b/lab11/index.html
@@ -37,8 +37,13 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+				
 			</div>
+
+            <div class="minor-section">
+                <h2>JS Output</h2>
+                <div id="output"></div>
+            </div>
 
 		</section>
 		<nav id="links">
