--- a/lab11/index.html
+++ b/lab11/index.html
@@ -42,6 +42,9 @@
 
             <div class="minor-section">
                 <h2>JS Output</h2>
+                 <input id="textbox" type="text">
+                 
+                 <button id="action">print text</button>
                 <div id="output"></div>
             </div>
 
