--- a/lab11/index.html
+++ b/lab11/index.html
@@ -43,8 +43,10 @@
             <div class="minor-section">
                 <h2>JS Output</h2>
                  <input id="textbox" type="text">
-                 
                  <button id="action">print text</button>
+				 
+				 <div class="name-section">
+
                 <div id="output"></div>
             </div>
 
