added code to JS and HTML page

--- a/lab11/index.html
+++ b/lab11/index.html
@@ -40,15 +40,15 @@
 				
 			</div>
 
-            <div class="minor-section">
-                <h2>JS Output</h2>
-                 <input id="textbox" type="text">
-                 <button id="action">print text</button>
-				 
-				 <div class="name-section">
+        <div class="minor-section">
+         <h2>JS Output</h2>
+         <input id="textbox" type="text" placeholder="Enter first and last name" />
+         <button id="action">Print Text</button>
 
-                <div id="output"></div>
-            </div>
+         <div class="name-section">
+             <div id="output"></div>
+             </div>
+</div>
 
 		</section>
 		<nav id="links">
