--- a/lab11/index.html
+++ b/lab11/index.html
@@ -42,8 +42,11 @@
 
         <div class="minor-section">
          <h2>JS Output</h2>
+		 <p>UCSC has disvovered a new species of dinosaur at the campus. Enter your first and last name to 
+			disvoer its name</p>
+		 </p>
          <input id="textbox" type="text" placeholder="Enter first and last name" />
-         <button id="action">Print Text</button>
+         <button id="action">Press to Discover a New Dinosaur Species</button>
 
          <div class="name-section">
              <div id="output"></div>
