--- a/lab11/index.html
+++ b/lab11/index.html
@@ -23,20 +23,33 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challenge for this lab was to JS and Jqurey and create a button and section for a user 
+						to enter and rearrange their name and the output shown in a text box.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- At first my code wasnt working as I was able to have the button set and the output but it 
+						didn't appear in my output box. I check the console and realized that my issue was that a missspell 
+						of one of my lines od code and I also didnt select the proper element and didnt have my code appear 
+						under "name-section" and was still under "minor-section".
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- As I continue working with JS I find each lab challenging but not too diffuclt. I mainly have an issue declaring my
+						functions or organizing my CSS to my JS and how to better track how I am better decalring and selecting elements. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<p>- Below I have my button working with a user input and a output section to show how the 
+						JS function displays the user's output and displays their name as a new dinosaur name.
+					</p>
 				
 			</div>
 
