--- a/lab11/index.html
+++ b/lab11/index.html
@@ -50,6 +50,8 @@
 					<p>- Below I have my button working with a user input and a output section to show how the 
 						JS function displays the user's output and displays their name as a new dinosaur name.
 					</p>
+					<img id="lab11_code" src="img/lab11_code.jpg" />
+				
 				
 			</div>
 
