--- a/lab12/index.html
+++ b/lab12/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Lab 11 - JavaScript Events and Forms</title>
+	<title>Lab 12 - Conditionals</title>
 
   	<meta charset="UTF-8" />
 
@@ -21,7 +21,7 @@
 	
 	<main id="content">
 		<section>
-			<h1>Lab 1 Experiment Page</h1>
+			<h1>Lab 12 - Conditionals</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
