--- a/lab12/index.html
+++ b/lab12/index.html
@@ -39,6 +39,8 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<input id="textbox" type="text" placeholder="Enter first and last name" />
+                   <button id="action">Press for Humanities Hope</button>
 					<div id="output"></div>
 			</div>
 
