--- a/lab12/index.html
+++ b/lab12/index.html
@@ -36,11 +36,16 @@
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
 			</div>
-
-			<div class="minor-section">
+ 
+           <div class="minor-section">
 					<h2>Results</h2>
-					<input id="textbox" type="text" placeholder="Enter first and last name" />
-                   <button id="action">Press for Humanities Hope</button>
+				
+			</div>
+			
+			<div class="minor-section">
+					<h2>D. I. N. O. S. A. U R a DINOSAUR!!!</h2>
+				  <input id="input" type="text" placeholder="Your name">
+                  <button id="button">Submit</button>
 					<div id="output"></div>
 			</div>
 
