--- a/lab12/index.html
+++ b/lab12/index.html
@@ -43,8 +43,8 @@
 			</div>
 			
 			<div class="minor-section">
-					<h2>D. I. N. O. S. A. U R a DINOSAUR!!!</h2>
-				  <input id="input" type="text" placeholder="Your name">
+					<h2>Do you hear the call of the warrior from Kahless???</h2>
+				  <input id="input" type="text" placeholder="Enter your name">
                   <button id="button">Submit</button>
 					<div id="output"></div>
 			</div>
