added images and finished code

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 		<nav id="'links"></nav>
 		<a href="lab11/">Lab 11 -  JavaScript Events and Forms</a>
 
+		<nav id="'links"></nav>
+		<a href="lab12/">Lab 12 - Conditionals</a>
+
 	    </div>
 
 		</nav>
