--- a/lab12/index.html
+++ b/lab12/index.html
@@ -25,20 +25,30 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The chaleneg for this lab was to create function of confiditnals that generate 
+						from the length of a user's input.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- I did encounter some probelms but it was connecting Klingon houses crest to appear when they aling with 
+						the name of a user's output.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- This was one of the more challenging labs done so far as it was alot of trial and error and testing out my 
+						code to make sure it functioned correctly. I did learn another way with w3S school to link images though JS instead of using CSS.
+					</p>
 			</div>
  
            <div class="minor-section">
 					<h2>Results</h2>
+					<img id="lab12_code" src="img/lab12_code.jpg" />
 				
 			</div>
 			
