--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 		<nav id="'links"></nav>
 		<a href="lab12/">Lab 12 - Conditionals</a>
 
+		<nav id="'links"></nav>
+		<a href="lab13/">Lab 13 - Buttstuff</a>
+
 	    </div>
 
 		</nav>
