--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<a href="lab12/">Lab 12 - Conditionals</a>
 
 		<nav id="'links"></nav>
-		<a href="lab13/">Lab 13 - Buttstuff</a>
+		<a href="lab13/">Lab 13 - Loops</a>
 
 	    </div>
 
