--- a/lab13/index.html
+++ b/lab13/index.html
@@ -23,7 +23,7 @@
 	
 	<main id="content">
 		<section>
-			<h1>Lab 13 Experiment Page</h1>
+			<h1>Lab 13 - Loops</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
