added code for button

--- a/lab13/index.html
+++ b/lab13/index.html
@@ -41,6 +41,7 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					 <button id="button">Press for the Hutt</button>
 					<div id="output"></div>
 			</div>
 
