--- a/lab13/index.html
+++ b/lab13/index.html
@@ -4,11 +4,9 @@
 	
 	<title>Lab 13</title>
 
-	
   	<meta charset="UTF-8" />
 	
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
 	
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	
@@ -27,16 +25,24 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p> - The challeneg for this lab was to create a loop in Javascript and output into the HTML. The loop 
+						is print a set number, I choose a list to print from 1 to 30 and when it prints at multipules of 2, 6 and 12 to print text instead of just numbers.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p> - When I first began working on the assignment i struggled completing the lab as my code didn't show and had to edit my output but wasn't to much 
+						of an issue as I looked over and realized that I didn't appened to my output corretly but I was able to fix this issue by going over my code and realizing that I didnt declare the element corretly.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p> - This lab was challenging as my loop didn't run or appear properly on my page but after going over my 
+						lecture and section notes I was able to have my lab appear on my webpage and work. </p>
 			</div>
 
 			<div class="minor-section">
