--- a/lab1/index.html
+++ b/lab1/index.html
@@ -43,6 +43,12 @@
 					<h2>Results</h2>
 					<div id="output"></div>
 			</div>
+			 <div class="accordion">
+    <div class="accordion-item">
+      <button class="accordion-header">SALES & DISTRIBUTION <span class="icon">+</span></button>
+      <div class="accordion-body">
+        <p>Sales and distribution content here...</p>
+      </div>
 
 		</section>
 		<nav id="links">
