--- a/lab14/index.html
+++ b/lab14/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Lab 10 - JavaScript for the Web</title>
+	<title>Lab 14 - Debugging Tools and Strategies</title>
 
   	<meta charset="UTF-8" />
 
@@ -21,7 +21,7 @@
 
 	<main id="content">
 		<section>
-			<h1>Lab 1 Experiment Page</h1>
+			<h1>Lab 14 - Debugging Tools and Strategies</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
@@ -42,7 +42,13 @@
 					<div id="output"></div>
 			</div>
 
+            <div class="minor-section">
+                <h2>Lab Refactoring</h2>
+                 <button id="button">Press to be become the Greatest Soilder</button>
+            </div>
+
 		</section>
+        
 		<nav id="links">
 			<div class="minor-section">
 				<h2>Homepage</h2>
