--- a/lab14/index.html
+++ b/lab14/index.html
@@ -44,11 +44,12 @@
 
             <div class="minor-section">
                 <h2>Lab Refactoring</h2>
-                 <button id="button">Press to be become the Greatest Soilder</button>
+               
+                <a href="index.html" class="button">Press to become the Greatest Soldier</a>
             </div>
 
 		</section>
-        
+
 		<nav id="links">
 			<div class="minor-section">
 				<h2>Homepage</h2>
